Name:			peparser
Version:		0.6
Description:	Extract the header information and sections from a file of the PE object format.
Synopsis: A parser for PE object files.
License:		BSD3
License-File:	LICENSE
Author:			Ian Graves, Sebastian Graf
Maintainer:		thegravian@gmail.com, sgraf1337@gmail.com
Category: Data
Stability: Experimental
homepage: https://github.com/sgraf812/peparser-haskell
Build-Type:		Simple
Cabal-Version:	>= 1.10

source-repository head
  type: git
  location: git://github.com/sgraf812/peparser-haskell.git


Library
    Default-Language: Haskell2010
    Build-Depends:	base >= 3, bytestring >= 0.9.1, binary >= 0.5.0, array >= 0.3
    Exposed-modules: 
       Data.PE.Parser, 
       Data.PE.Structures,
       Data.PE.Utils,
       Data.PE.Tools
